--- a/website/pages/docs/introduction.en-US.mdx
+++ b/website/pages/docs/introduction.en-US.mdx
@@ -34,23 +34,13 @@ import { Package } from 'lucide-react';
 
 ### Installation Steps
 
-<Steps>
-
-### Clone the `zshmgr` repository
+### Download and run the `install.sh` script:
 
 ```bash
-git clone https://github.com/fun117/zshmgr.git
-cd zshmgr
-```
-
-### Run the `install.sh` script to install `zshmgr`
-
-```bash
+curl -O https://raw.githubusercontent.com/fun117/zshmgr/main/install.sh
 chmod +x install.sh
 ./install.sh
 ```
-
-</Steps>
 
 Now, `zshmgr` is installed and available system-wide.
 
