--- a/website/pages/docs/introduction.ja.mdx
+++ b/website/pages/docs/introduction.ja.mdx
@@ -33,22 +33,13 @@ import { Callout, Steps, Tabs } from 'nextra/components'
 
 ### インストール方法
 
-<Steps>
-
-### `zshmgr` リポジトリをクローンします
+### `install.sh` スクリプトをダウンロードして実行します：
 
 ```bash
-git clone https://github.com/fun117/zshmgr.git
-cd zshmgr
-```
-
-### `install.sh` スクリプトを実行して `zshmgr` をインストールします
-
-```bash
+curl -O https://raw.githubusercontent.com/fun117/zshmgr/main/install.sh
 chmod +x install.sh
 ./install.sh
 ```
-</Steps>
 
 これで zshmgr がインストールされ、システム全体で利用可能になります。
 
