--- a/website/pages/index.en-US.mdx
+++ b/website/pages/index.en-US.mdx
@@ -1,3 +1,27 @@
-# Welcome to Zshmgr
- 
-Hello, world!
+---
+title: Home
+---
+
+import Logo from "../components/logo";
+
+<div className="flex flex-wrap justify-center items-center gap-2 md:gap-4">
+  <Logo width="152" height="152" />
+  <h1 className="headline italic text-4xl font-bold">Zshmgr</h1>
+</div>
+
+## Overview
+
+Zshmgr is a simple package manager for Zsh. It allows users to easily install, uninstall, update, and list packages. The tool is designed to work seamlessly with GitHub repositories, making it easy to manage your Zsh scripts and tools.
+
+### Features
+
+- **Install Packages**: Easily install packages from GitHub repositories.
+- **Uninstall Packages**: Remove installed packages cleanly.
+- **Update Packages**: Keep your packages up to date with the latest version.
+- **List Packages**: View all installed packages.
+
+## Contact
+
+For any questions or feedback, please contact us via [GitHub Discussions](https://github.com/fun117/zshmgr/discussions).
+
+Thank you for using Zshmgr!
