--- a/website/pages/index.ja.mdx
+++ b/website/pages/index.ja.mdx
@@ -1,3 +1,27 @@
-# Welcome to Zshmgr
- 
-Hello, world!
+---
+title: ホーム
+---
+
+import Logo from "../components/logo";
+
+<div className="flex flex-wrap justify-center items-center gap-2 md:gap-4">
+  <Logo width="152" height="152" />
+  <h1 className="headline italic text-4xl font-bold">Zshmgr</h1>
+</div>
+
+## 概要
+
+Zshmgr は、Zsh用のシンプルなパッケージマネージャーです。ユーザーはパッケージのインストール、アンインストール、アップデート、リスト表示を簡単に行うことができます。このツールはGitHubリポジトリとシームレスに連携するように設計されており、Zshスクリプトやツールの管理が容易になります。
+
+### 機能
+
+- **パッケージのインストール**: GitHubリポジトリから簡単にパッケージをインストールできます。
+- **パッケージのアンインストール**: インストール済みのパッケージをクリーンに削除します。
+- **パッケージのアップデート**: パッケージを最新バージョンに更新します。
+- **パッケージのリスト表示**: インストール済みのパッケージを表示します。
+
+## 連絡先
+
+質問やフィードバックがある場合は、[GitHub ディスカッション](https://github.com/fun117/zshmgr/discussions) を通じてお問い合わせください。
+
+Zshmgr をご利用いただきありがとうございます！
