--- a/website/pages/docs/create-packages.ja.mdx
+++ b/website/pages/docs/create-packages.ja.mdx
@@ -1,5 +1,6 @@
 ---
 title: 自作のパッケージを作成して公開する
+image: /favicon/apple-touch-icon.png
 ---
 
 import { Callout, Steps, FileTree, Tabs } from 'nextra/components'
