--- a/website/pages/docs/packages.en-US.mdx
+++ b/website/pages/docs/packages.en-US.mdx
@@ -1,5 +1,6 @@
 ---
 title: Package Operations and Management
+image: /favicon/apple-touch-icon.png
 ---
 
 import { Callout, Steps, FileTree, Tabs, Cards, Card } from 'nextra/components'
