--- a/website/pages/about.en-US.mdx
+++ b/website/pages/about.en-US.mdx
@@ -1,12 +1,13 @@
 ---
 title: About Zshmgr
+image: /favicon/apple-touch-icon.png
 ---
 
 # About Zshmgr
 
 ## Overview
 
-`zshmgr` is a simple package manager for Zsh. It allows users to easily install, uninstall, update, and list packages. The tool is designed to work seamlessly with GitHub repositories, making it easy to manage your Zsh scripts and tools.
+Zshmgr is a simple package manager for Zsh. It allows users to easily install, uninstall, update, and list packages. The tool is designed to work seamlessly with GitHub repositories, making it easy to manage your Zsh scripts and tools.
 
 ### Features
 
@@ -17,7 +18,7 @@ title: About Zshmgr
 
 ### Supported Operating Systems
 
-`zshmgr` works on the following operating systems:
+Zshmgr works on the following operating systems:
 - **macOS**
 - **Linux**
 - **Windows** (via WSL)
@@ -28,7 +29,7 @@ We welcome contributions from the community! Here are a few ways you can help:
 
 ### Reporting Issues
 
-If you encounter any issues while using `zshmgr`, please report them on the [GitHub Issues](https://github.com/fun117/zshmgr/issues) page. When reporting an issue, please include as much detail as possible, including steps to reproduce the issue and any relevant error messages.
+If you encounter any issues while using Zshmgr, please report them on the [GitHub Issues](https://github.com/fun117/zshmgr/issues) page. When reporting an issue, please include as much detail as possible, including steps to reproduce the issue and any relevant error messages.
 
 ### Submitting Pull Requests
 
@@ -47,10 +48,10 @@ Good documentation is essential for any project. If you notice any errors or omi
 
 ## License
 
-`zshmgr` is licensed under the MIT License. See the [LICENSE](license) file for more details.
+Zshmgr is licensed under the MIT License. See the [LICENSE](/docs/license) file for more details.
 
 ## Contact
 
 For any questions or feedback, please contact us via [GitHub Discussions](https://github.com/fun117/zshmgr/discussions).
 
-Thank you for using `zshmgr`!
+Thank you for using Zshmgr!
