--- a/website/pages/about.ja.mdx
+++ b/website/pages/about.ja.mdx
@@ -1,12 +1,13 @@
 ---
 title: Zshmgrについて
+image: /favicon/apple-touch-icon.png
 ---
 
 # Zshmgrについて
 
 ## 概要
 
-`zshmgr` は、Zsh用のシンプルなパッケージマネージャーです。ユーザーはパッケージのインストール、アンインストール、アップデート、リスト表示を簡単に行うことができます。このツールはGitHubリポジトリとシームレスに連携するように設計されており、Zshスクリプトやツールの管理が容易になります。
+Zshmgr は、Zsh用のシンプルなパッケージマネージャーです。ユーザーはパッケージのインストール、アンインストール、アップデート、リスト表示を簡単に行うことができます。このツールはGitHubリポジトリとシームレスに連携するように設計されており、Zshスクリプトやツールの管理が容易になります。
 
 ### 機能
 
@@ -17,7 +18,7 @@ title: Zshmgrについて
 
 ### 対応オペレーティングシステム
 
-`zshmgr` は、以下のオペレーティングシステムで動作します：
+Zshmgr は、以下のオペレーティングシステムで動作します：
 - **macOS**
 - **Linux**
 - **Windows**（WSLを使用）
@@ -28,7 +29,7 @@ title: Zshmgrについて
 
 ### 問題の報告
 
-`zshmgr` を使用中に問題が発生した場合は、[GitHub Issues](https://github.com/fun117/zshmgr/issues) ページに報告してください。問題を報告する際には、可能な限り詳細な情報（再現手順や関連するエラーメッセージなど）を含めてください。
+Zshmgr を使用中に問題が発生した場合は、[GitHub Issues](https://github.com/fun117/zshmgr/issues) ページに報告してください。問題を報告する際には、可能な限り詳細な情報（再現手順や関連するエラーメッセージなど）を含めてください。
 
 ### プルリクエストの送信
 
@@ -47,10 +48,10 @@ title: Zshmgrについて
 
 ## ライセンス
 
-`zshmgr` はMITライセンスの下でライセンスされています。詳細は [LICENSE](license) ファイルを参照してください。
+Zshmgr はMITライセンスの下でライセンスされています。詳細は [LICENSE](/docs/license) ファイルを参照してください。
 
 ## 連絡先
 
 質問やフィードバックがある場合は、[GitHub Discussions](https://github.com/fun117/zshmgr/discussions) を通じてお問い合わせください。
 
-`zshmgr` をご利用いただきありがとうございます！
+Zshmgr をご利用いただきありがとうございます！
