--- a/website/pages/docs/create-packages.en-US.mdx
+++ b/website/pages/docs/create-packages.en-US.mdx
@@ -1,5 +1,6 @@
 ---
 title: Creating and Publishing Your Own Package
+image: /favicon/apple-touch-icon.png
 ---
 
 import { Callout, Steps, FileTree, Tabs } from 'nextra/components'
