--- a/website/pages/docs/introduction.en-US.mdx
+++ b/website/pages/docs/introduction.en-US.mdx
@@ -1,5 +1,6 @@
 ---
 title: Introduction
+image: /favicon/apple-touch-icon.png
 ---
 
 import { Callout, Steps, FileTree, Tabs, Cards, Card } from 'nextra/components'
