OSを取得し宣言するコードを追加

--- a/website/pages/docs/create-packages.ja.mdx
+++ b/website/pages/docs/create-packages.ja.mdx
@@ -39,6 +39,9 @@ echo "package_name からこんにちは!"
 ```bash filename="install.sh"
 #!/bin/bash
 
+# Detect OS
+OS=$(uname -s)
+
 # スクリプトのディレクトリに移動
 cd "$(dirname "$0")"
 
@@ -75,6 +78,9 @@ echo "package_name has been installed. You can now use the 'script_name' command
 
 ```bash filename="uninstall.sh"
 #!/bin/bash
+
+# Detect OS
+OS=$(uname -s)
 
 # スクリプトのディレクトリに移動
 cd "$(dirname "$0")"
