New version 0.0.1-beta

--- a/website/pages/docs/create-packages.ja.mdx
+++ b/website/pages/docs/create-packages.ja.mdx
@@ -39,7 +39,7 @@ echo "package_name からこんにちは!"
 ```bash filename="install.sh"
 #!/bin/bash
 
-# Detect OS
+# OSを検出
 OS=$(uname -s)
 
 # スクリプトのディレクトリに移動
@@ -79,7 +79,7 @@ echo "package_name has been installed. You can now use the 'script_name' command
 ```bash filename="uninstall.sh"
 #!/bin/bash
 
-# Detect OS
+# OSを検出
 OS=$(uname -s)
 
 # スクリプトのディレクトリに移動
